--- a/portada.tex
+++ b/portada.tex
@@ -12,11 +12,11 @@
 
         % Título
         {\fontfamily{phv}\bfseries\fontsize{33pt}{40pt}\selectfont
-        Título del trabajo} \\[1.5cm]
+        Desarrollo de un sistema embebido para la gestión y monitoreo de cultivos verticales} \\[1.5cm]
 
         % Autor
         {\fontfamily{phv}\fontsize{20pt}{25pt}\selectfont
-        Nombre del autor} \\[1cm]
+        Ing. José Luis Krüger} \\[1cm]
 
         % Carrera o Maestría (comentar o descomentar la línea correspondiente)
         {\fontfamily{phv}\fontsize{15pt}{20pt}\selectfont
@@ -32,7 +32,7 @@
 
         % Director
         {\fontfamily{phv}\fontsize{11pt}{15pt}\selectfont
-        \textbf{Director:} Director (pertenencia)} \\[1cm]
+        \textbf{Director:} Esp. Ing. Mariano Campos (FIUBA)} \\[1cm]
 
         % Jurados
         {\fontfamily{phv}\fontsize{11pt}{15pt}\selectfont
