Versión 1 del primer capitulo

--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -77,7 +77,7 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
-Este trabajo presenta el desarrollo, construcción, instalación y prueba de un dispositivo semiautomático de monitoreo y gestión para un cultivo hidropónico vertical. Su implementación requirió la aplicación de conocimientos en electrónica, programación, sistemas operativos de tiempo real, pruebas de software, diseño y ensamblaje de PCB, integración de sensores y comunicación IoT.
+Este trabajo presenta el desarrollo, construcción, instalación y prueba de un dispositivo semiautomático de monitoreo y gestión para un cultivo hidropónico vertical. Su implementación requirió la aplicación de conocimientos en electrónica, programación, sistemas operativos de tiempo real, testing de software, diseño y ensamblaje de PCB, integración de sensores y protocolos de comunicación.
 
 Los resultados muestran una mejora en la eficiencia del cultivo, reduciendo desperdicios y aumentando la productividad en comparación con los métodos tradicionales. Este avance representa un paso clave hacia la sostenibilidad y la optimización en la producción de alimentos del futuro.
 \end{abstract}
