--- a/references.bib
+++ b/references.bib
@@ -5,6 +5,179 @@
     YEAR="2017",
 }
 
+@ARTICLE{PEOPLE,
+    AUTHOR = {UN},
+    TITLE = {Población},
+    JOURNAL = {www.un.org},
+    YEAR = {2023},
+    URL = {https://www.un.org/es/global-issues/population},
+}
+
+@ARTICLE{AGUA,
+    AUTHOR = {Marisa Arienza, Andrés E. Carsen Pittaluga, Miguel A. Gómez, Carlos Miguel Marschoff},
+    TITLE = {AGUA},
+    JOURNAL = {www.greencross.org.ar},
+    URL = {https://www.greencross.org.ar/download/LibroAguaaimprirweb.pdf},
+}
+
+@ARTICLE{FAO,
+    AUTHOR = {FAO},
+    TITLE = {El estado de la seguridad alimentaria y la nutrición en el mundo 2022},
+    JOURNAL = {fao.org},
+    YEAR = {2022},
+    URL = {https://openknowledge.fao.org/items/ec2794d0-7265-47d8-a9c1-439c7d836a50},
+}
+
+@article{alhwarin2020vertical,
+  author = {Aditi Saha Roy, Saptashree Das, Debajyoti Saha and Subhajit Barat},
+  title = {Vertical farming: A sustainable agriculture format of
+the future},
+  journal = {International Journal of Research in Agronomy},
+  year = {2024},
+  url = { https://doi.org/10.33545/2618060X.2024.v7.i4Sd.641}
+}
+
+@MISC{CLARIN,
+    author = "{Clarín}",
+    title = "Se desperdicia el 84 por ciento del agua para riego",
+    year = "2024",
+    url = "https://www.clarin.com/sociedad/desperdicia-84-ciento-agua-riego_0_rJ-xuMJZCtg.html"
+}
+
+@misc{SANTANDER,
+  author = {Banco Santander},
+  title = {Cultivos Verticales: Ventajas y Desventajas},
+  year = {2023},
+  url = {https://www.bancosantander.es/blog/pymes-negocios/cultivos-verticales-ventajas-desventajas#:~:text=Los%20cultivos%20verticales%20son%20una,del%20espacio%20y%20la%20luz.}
+}
+
+@misc{CULTIVOS:TIPOS,
+  author = {Agroquivir},
+  title = {Agricultura vertical: Cómo funciona y tipos},
+  year = {2023},
+  url = {https://agroquivir.com/agricultura-vertical-como-funciona-y-tipos/}
+}
+
+@MISC{NIDO:PRO,
+    author = "{Agrointec}",
+    title = "Nidopro - Sistema Hidropónico Inteligente de Cultivo Vertical",
+    year = "2025",
+    url = "https://www.agrointec.com/producto/nidopro-sistema-hidroponico-inteligente-cultivo-vertical/"
+}
+
+@MISC{XIAOMI,
+    author = "{Techpunt}",
+    title = "Xiaomi Mi Flower Care Plant Sensor",
+    year = "2025",
+    url = "https://www.techpunt.nl/en/xiaomi-mi-flower-care-plant-sensor.html"
+}
+
+@MISC{KONIX,
+    author = "{Konyks}",
+    title = "Hydro Kit",
+    year = "2025",
+    url = "https://konyks.com/es/producto/hydro-kit/"
+}
+
+@MISC{SMART:9,
+    author = "{Click and Grow}",
+    title = "The Smart Garden 9 Pro",
+    year = "2025",
+    url = "https://www.clickandgrow.com/products/the-smart-garden-9-pro"
+}
+
+
+@MISC{DEV:KIT,
+    author = "{Espressif Systems}",
+    title = "ESP32 DevKitC User Guide",
+    year = "2025",
+    url = "https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html#functional-description"
+}
+
+@MISC{PH:4502C,
+    author = "{Think Robotics}",
+    title = "PH4502C PH Meter",
+    year = "2025",
+    url = "https://thinkrobotics.com/products/ph4502c-ph-meter?srsltid=AfmBOopTC1VLNuFBrGYsfEB4faApwjy9sQJns4zOBfhpjvGGZz_iQRU1"
+}
+
+@MISC{TDS,
+    author = "{Ichibot}",
+    title = "TDS Meter V1 Module - Water Meter Filter Measuring Water Quality Sensor",
+    year = "2025",
+    url = "https://store.ichibot.id/product/tds-meter-v1-module-water-meter-filter-measuring-water-quality-sensor/"
+}
+
+@MISC{MOISTURE,
+    author = "{ProBots}",
+    title = "Soil Moisture Sensor Capacitive V1.2",
+    year = "2025",
+    url = "https://probots.co.in/soil-moisture-sensor-capacitive-v1-2.html"
+}
+
+@MISC{DS18B20,
+    author = "{Analog Devices}",
+    title = "DS18B20 Programmable Resolution 1-Wire Digital Thermometer Datasheet",
+    year = "2025",
+    url = "https://www.analog.com/media/en/technical-documentation/data-sheets/ds18b20.pdf"
+}
+
+@MISC{BH1750,
+    author = "{Mouser Electronics}",
+    title = "BH1750FVI Digital Light Sensor Datasheet",
+    year = "2025",
+    url = "https://www.mouser.com/datasheet/2/348/bh1750fvi-e-186247.pdf?srsltid=AfmBOorrJyGddy77cYJODidiGAIv0xVFPwBJiKPiwQfXF0zuK2BGv7UM"
+}
+
+@MISC{ESPIDF,
+    author = "{Espressif Systems}",
+    title = "ESP-IDF: Espressif IoT Development Framework",
+    year = "2025",
+    url = "https://www.espressif.com/en/products/sdks/esp-idf"
+}
+
+@MISC{FREERTOS,
+    author = "{FreeRTOS}",
+    title = "FreeRTOS: Real-Time Operating System",
+    year = "2025",
+    url = "https://www.freertos.org/"
+}
+
+@MISC{CEEDLING,
+    author = "{Throw The Switch}",
+    title = "Ceedling: A Build System and Test Framework for C",
+    year = "2025",
+    url = "https://www.throwtheswitch.org/ceedling"
+}
+
+@MISC{HTTP,
+    author = "{Mozilla Developer Network (MDN)}",
+    title = "Protocolo de Transferencia de Hipertexto (HTTP)",
+    year = "2025",
+    url = "https://developer.mozilla.org/es/docs/Web/HTTP"
+}
+
+@MISC{I2C,
+    author = "{Wikipedia}",
+    title = "I²C",
+    year = "2025",
+    url = "https://es.wikipedia.org/wiki/I%C2%B2C"
+}
+
+@MISC{1WIRE,
+    author = "{Wikipedia}",
+    title = "1-Wire",
+    year = "2025",
+    url = "https://es.wikipedia.org/wiki/1-Wire"
+}
+
+@MISC{reactnative,
+    author = "{React Native}",
+    title = "React Native: Learn Once, Write Anywhere",
+    year = "2025",
+    url = "https://reactnative.dev/"
+}
+
 @BOOK{BOOK:1,
     AUTHOR="John Doe",
     TITLE="The Book without Title",
