--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -24,6 +24,10 @@
 \usepackage{graphicx}       % Manejo de gráficos
 \usepackage{eso-pic}        % Permite agregar fondos
 \usepackage{hyperref}       % Manejo de hipervínculos y marcadores
+\usepackage{biblatex}       % Manejo de bibliografía con Biber
+\usepackage{url} % Para manejar URLs en referencias
+
+\addbibresource{references.bib} % Enlace al archivo de referencias
 
 % Redefinición de caracteres problemáticos en marcadores
 \hypersetup{
@@ -79,7 +83,7 @@
 \addchaptertocentry{\abstractname} % Agregar resumen al índice
 Este trabajo presenta el desarrollo, construcción, instalación y prueba de un dispositivo semiautomático de monitoreo y gestión para un cultivo hidropónico vertical. Su implementación requirió la aplicación de conocimientos en electrónica, programación, sistemas operativos de tiempo real, testing de software, diseño y ensamblaje de PCB, integración de sensores y protocolos de comunicación.
 
-Los resultados muestran una mejora en la eficiencia del cultivo, reduciendo desperdicios y aumentando la productividad en comparación con los métodos tradicionales. Este avance representa un paso clave hacia la sostenibilidad y la optimización en la producción de alimentos del futuro.
+El sistema mejora la eficiencia del cultivo al minimizar los desperdicios y aumentar la productividad en comparación con los métodos tradicionales. Este avance representa un paso clave hacia la sostenibilidad y la optimización de la producción de alimentos en el futuro.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
