--- a/memorianueva.tex
+++ b/memorianueva.tex
@@ -26,7 +26,8 @@
 \usepackage{hyperref}       % Manejo de hipervínculos y marcadores
 \usepackage{biblatex}       % Manejo de bibliografía con Biber
 \usepackage{url} % Para manejar URLs en referencias
-
+ \usepackage{float}
+ 
 \addbibresource{references.bib} % Enlace al archivo de referencias
 
 % Redefinición de caracteres problemáticos en marcadores
